--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <meta property="og:title" content="Created By Tony T">
   <meta property="og:description" content="A Creative Landscape Created and Developed By Tony T">
-  <meta property="og:image" content="src/assets/ThumbIMG.webp">
+  <meta property="og:image" content="https://raw.githubusercontent.com/StackHustla/tony-graphics/main/src/assets/ThumbIMG-01.webp">
   <meta property="og:url" content="https://createdbytonyt.com">
   <meta property="og:type" content="website">
 
